--- a/doze/res/xml/gesture_panel.xml
+++ b/doze/res/xml/gesture_panel.xml
@@ -18,38 +18,38 @@
 
     <PreferenceCategory
         android:key="ambient_display_key"
-        android:title="@string/ambient_display_title">
+        android:title="Ambient Display">
 
         <SwitchPreference
             android:key="doze_enabled"
             android:defaultValue="true"
-            android:title="@string/ambient_display_enable_title"
-            android:summary="@string/ambient_display_enable_summary" />
+            android:title="Ambient Display"
+            android:summary="Ambient Display" />
 
         <SwitchPreference
             android:key="gesture_hand_wave"
             android:defaultValue="false"
-            android:title="@string/hand_wave_gesture_title"
-            android:summary="@string/hand_wave_gesture_summary"
+            android:title="Hand Gesture"
+            android:summary="Hand Gesture"
             android:dependency="doze_enabled" />
 
         <SwitchPreference
             android:key="gesture_pocket"
             android:defaultValue="false"
-            android:title="@string/pocket_gesture_title"
-            android:summary="@string/pocket_gesture_summary"
+            android:title="Pocket Gesture"
+            android:summary="Pocket Gesture"
             android:dependency="doze_enabled" />
     </PreferenceCategory>
 
     <PreferenceCategory
         android:key="proximity_wake_key"
-        android:title="@string/proximity_wake_title">
+        android:title="Proximity Wake">
 
         <SwitchPreference
             android:key="proximity_wake_enable"
             android:defaultValue="false"
-            android:title="@string/proximity_wake_enable_title"
-            android:summary="@string/proximity_wake_enable_summary" />
+            android:title="Proximity Wake Enabled"
+            android:summary="Proximity Wake Enabled" />
     </PreferenceCategory>
 
 </PreferenceScreen>
